# TAPAS

./: .cproject  .project  CMakeLists.txt  README.md  main.cpp  package.xml  settings.xml  settings_trobot.xml
Debug/: Debug.cpp  Debug.h
MechanicalGrabber/: MechanicalGrabber.h
MovementConstraints/: ConstraintsHelpers.cpp  ConstraintsHelpers.h  MovementConstraints.cpp  MovementConstraints.h  main.cpp
Planning/: GlobalPlanner.cpp  GlobalPlanner.h  LocalPlanner.cpp  LocalPlanner.h  PlannerHelpers.cpp  PlannerHelpers.h
PositionEstimation/: PositionEstimation.cpp  PositionEstimation.h
Robot/: Robot.cpp  Robot.h  RosHelpers.cpp  RosHelpers.h
TapasQt/: Calibration.cpp  Calibration.h  CameraWindow.cpp  CameraWindow.ui  Chart.cpp  Chart.h  Constraints.cpp  Constraints.h  ImuChart.cpp  ImuChart.h  QtCamera.cpp  QtCamera.h  QtEncoders.cpp  QtEncoders.h  QtGps.cpp  QtGps.h  QtHokuyo.cpp  QtHokuyo.h  QtRobotDrive.cpp  QtRobotDrive.h  Recording.cpp  Recording.h  TapasQt.cpp  TapasQt.h  TapasQt.ui  Viewer.cpp  Viewer.h  gui.cpp  ui_CameraWindow.h  ui_TapasQt.h
TapasQt1/: CameraWindow.cpp  Chart.cpp  Chart.h  QtEncoders.h  QtHokuyo.cpp  TapasQt.ui
Trobot_Qt/: Calibration.cpp  Constraints.cpp  Constraints.h  ImuChart.cpp  ImuChart.h  QtCamera.cpp  QtCamera.h  QtGps.cpp  QtGps.h  QtHokuyo.cpp  QtRobotDrive.cpp  QtRobotDrive.h  Recording.cpp  Recording.h  Viewer.cpp  Viewer.h  trobotqt.cpp  trobotqt.h  trobotqt.ui  ui_trobotqt.h
branches/MNtests/: CMakeLists.txt  CMakeLists_begin.txt  main.cpp
branches/MNtests/MovementConstraints/: MovementConstraints.cpp  MovementConstraints.h
branches/MNtests/MovementConstraints/Hokuyo/: Hokuyo.cpp  Hokuyo.h
branches/MNtests/Planning/: GlobalPlanner.h  LocalPlannersInterface.h
branches/MNtests/Planning/PlanningSearching/: LocalPlannerSearching.cpp
branches/MNtests/Planning/PlanningToGold/: LocalPlannerToGold.cpp
branches/MNtests/Planning/PlanningWithGold/: LocalPlannerWithGold.cpp
branches/MNtests/PositionEstimation/: PositionEstimation.cpp  PositionEstimation.h
branches/MNtests/PositionEstimation/GPS/: GPS.cpp
branches/MNtests/PositionEstimation/IMU/: IMU.cpp
branches/MNtests/Robot/: Robot.cpp  Robot.h
branches/MNtests/Trobot/source/: Gps.cpp  Imu.cpp  Motor.cpp
branches/MNtests/Trobot_Qt/: CameraWindow.cpp  QtRobotDrive.cpp  QtRobotDrive.h  trobotqt.cpp  trobotqt.h  trobotqt.ui
branches/gpu/: .cproject  .project  CMakeLists.txt  settings.xml
branches/gpu/MovementConstraints/: MovementConstraints.cpp  MovementConstraints.h
branches/gpu/MovementConstraints/Camera/: Camera.cpp  Camera.cu  Camera.h  CameraCuda.h  CameraKernels.cu
branches/gpu/MovementConstraints/Camera/HierClassifier/: ClassifierSVM.h  HierClassifier.cpp  HierClassifier.h
branches/gpu/MovementConstraints/Camera/LibSVM-weights/: svm.cpp
branches/gpu/MovementConstraints/Hokuyo/: Hokuyo.h
branches/gpu/Planning/: GlobalPlanner.cpp
branches/gpu/PositionEstimation/: PositionEstimation.h
branches/gpu/PositionEstimation/Encoders/: Encoders.cpp
branches/gpu/PositionEstimation/GPS/src/: sentence.c  tok.c
branches/gpu/PositionEstimation/IMU/: IMU.cpp
branches/gpu/Robot/: Robot.cpp  Robot.h
branches/gpu/Trobot/include/: const_inttypes.h
branches/gpu/Trobot/source/: Imu.cpp  SerialPort.cpp
branches/gpu/Trobot_Qt/: CameraWindow.cpp  ImuChart.cpp  Recording.cpp  Viewer.cpp  Viewer.h  trobotqt.cpp  trobotqt.h  trobotqt.ui
branches/gpu/doc/: graf.graphml  kamera_graf.graphml
doc/: graf.graphml  report.tex
launch/: TapasGui.launch
trunk/: .cproject  .project  CMakeLists.txt  main.cpp  settings.xml  settings_trobot.xml
trunk/Debug/: Debug.cpp  Debug.h
trunk/MovementConstraints/: MovementConstaints.cpp  MovementConstaints.h  MovementConstraints.cpp  MovementConstraints.h
trunk/MovementConstraints/Camera/: Camera.cpp  Camera.cu  Camera.h  CameraCuda.h  CameraKernels.cu  UnionFind.cpp  UnionFind.h
trunk/MovementConstraints/Camera/HierClassifier/: Classifier.cpp  Classifier.h  ClassifierRF.cpp  ClassifierSVM.cpp  ClassifierSVM.h  HierClassifier.cpp  HierClassifier.h
trunk/MovementConstraints/Camera/LibSVM-weights/: svm.cpp
trunk/MovementConstraints/Hokuyo/: Hokuyo.cpp  Hokuyo.h
trunk/MovementConstraints/Sharp/: Sharp.h
trunk/Planning/: GlobalPlanner.cpp  GlobalPlanner.h  LocalPlanner.cpp  LocalPlanner.h
trunk/Planning/PlanningSearching/: LocalPlannerSearching.cpp
trunk/Planning/PlanningWithGold/: LocalPlannerWithGold.cpp  LocalPlannerWithGold.h
trunk/Planning/RobotDrivers/: robotDrivers.cpp  robotDrivers.h
trunk/PositionEstimation/: PositionEstimation.cpp  PositionEstimation.h
trunk/PositionEstimation/Encoders/: Encoders.cpp  Encoders.h
trunk/PositionEstimation/GPS/: GPS.cpp  GPS.h
trunk/PositionEstimation/GPS/src/: context.c  generate.c  gmath.c  parse.c  time.c
trunk/PositionEstimation/IMU/: IMU.cpp  IMU.h
trunk/PositionEstimation/IMU/include/: IMU_driver.h
trunk/PositionEstimation/IMU/src/: IMU_driver.cpp
trunk/PositionEstimation/Util/: ExtendedKalmanFilter.cpp  ExtendedKalmanFilter.h
trunk/Robot/: Robot.cpp  Robot.h
trunk/TapasQt/: Calibration.cpp  Calibration.h  CameraWindow.cpp  CameraWindow.h  Chart.cpp  Chart.h  Constraints.cpp  Constraints.h  ImuChart.h  QtCamera.cpp  QtCamera.h  QtEncoders.cpp  QtEncoders.h  QtGps.cpp  QtGps.h  QtHokuyo.cpp  QtRobotDrive.h  Recording.cpp  Recording.h  TapasQt.cpp  TapasQt.h  Viewer.cpp  Viewer.h  gui.cpp  ui_CameraWindow.h  ui_TapasQt.h
trunk/TapasQt1/: CameraWindow.h  Constraints.h  ImuChart.cpp  QtHokuyo.h  QtRobotDrive.cpp  Recording.cpp  TapasQt.h  gui.cpp
trunk/Trobot/include/: Address.h  Constants.h  RobotDrive.h  RoboteqDevice.h
trunk/Trobot/source/: RobotDrive.cpp  RobotDrive.cpp.mine  SerialPort.cpp
trunk/Trobot_Qt/: Calibration.cpp  CameraWindow.cpp  Chart.cpp  Constraints.cpp  Constraints.h  ImuChart.cpp  ImuChart.h  QtCamera.cpp  QtEncoders.cpp  QtEncoders.h  QtGps.cpp  QtHokuyo.cpp  QtHokuyo.h  QtRobotDrive.cpp  QtRobotDrive.h  Recording.cpp  Recording.h  Viewer.cpp  Viewer.h  gui.cpp  trobotqt.cpp  trobotqt.h  trobotqt.ui  ui_trobotqt.h
(+195 files in other folders)
